2023-07-16T08:23:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5566675646 # 610
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-16
* notice: last 14d: unq all: 8 37
* notice: prev accum: outdated-unq outdated-all / unq all: 181 402 / 200 438
* notice: next accum: outdated-unq outdated-all / unq all: 181 402 / 201 439
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-07-16]

2023-07-16T02:12:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5565285432 # 609
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-16
* notice: last 14d: unq all: 8 36
* notice: prev accum: outdated-unq outdated-all / unq all: 181 402 / 200 437
* notice: next accum: outdated-unq outdated-all / unq all: 181 402 / 200 438
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-07-15]

2023-07-15T08:23:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5561289525 # 607
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-15
* notice: last 14d: unq all: 8 35
* notice: prev accum: outdated-unq outdated-all / unq all: 180 401 / 199 436
* notice: next accum: outdated-unq outdated-all / unq all: 181 402 / 200 437
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-07-01] / [2023-07-15]

2023-07-14T16:25:16Z: