@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-16T08:23:14Z",
+  "timestamp" : "2023-07-16T16:25:07Z",
   "count_outdated" : 402,
   "uniques_outdated" : 181,
-  "count" : 439,
-  "uniques" : 201,
+  "count" : 440,
+  "uniques" : 202,
   "clones" : [
     {
       "timestamp": "2023-07-03T00:00:00Z",
@@ -97,12 +97,12 @@
     },
     {
       "timestamp": "2023-07-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
