@@ -1,5 +1,5 @@
 {
-  "count": 37,
+  "count": 38,
   "uniques": 8,
   "clones": [
     {
@@ -54,8 +54,8 @@
     },
     {
       "timestamp": "2023-07-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
