@@ -1,3 +1,12 @@
+2023-07-16T16:25:07Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5568672752 # 611
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-16
+* notice: last 14d: unq all: 8 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 181 402 / 201 439
+* notice: next accum: outdated-unq outdated-all / unq all: 181 402 / 202 440
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2023-07-16]
+
 2023-07-16T08:23:14Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5566675646 # 610
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-16
